added uidService, configService and restClientService

--- a/frontend/webapp/templates/exerciseView.html
+++ b/frontend/webapp/templates/exerciseView.html
@@ -5,7 +5,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">{{ exiciseName }}</a></h1> <!-- {{ exiciseName }} -->
+							<h1><a href="/">{{ exiciseName }}</a></h1> <!-- {{ exiciseName }} -->
 							<span>{{ exiciseTarget }}</span>		 <!-- {{ exiciseTarget }} -->
 						</div>
 
